==> ChibiOS/ChibiOS/os/hal/platforms/LPC17xx/can_lld.c <==
#include "ch.h"
#include "hal.h"

static void can_lld_tx_handler(CANDriver *canp) {

  /* All transmit buffers are available.*/
  if (canp->can->GSR & CANGSR_TBS) {
    chSysLockFromIsr();
    while (chSemGetCounterI(&canp->txsem) < 0)
      chSemSignalI(&canp->txsem);
    chEvtBroadcastFlagsI(&canp->txempty_event, CAN_MAILBOX_TO_MASK(1));
    chSysUnlockFromIsr();
  }
}

void can_lld_init(void) {

#if LPC17xx_CAN_USE_CAN1
  /* Driver initialization.*/
  canObjectInit(&CAND1);
  CAND1.can = LPC_CAN1;
#endif
#if LPC17xx_CAN_USE_CAN2
  /* Driver initialization.*/
  canObjectInit(&CAND2);
  CAND2.can = LPC_CAN2;
#endif

}

void can_lld_start(CANDriver *canp) {

#if LPC17xx_CAN_USE_CAN1
  if (&CAND1 == canp) {
    LPC_SC->PCONP |= (1UL << 13);
  }
#endif
#if LPC17xx_CAN_USE_CAN2
  if (&CAND2 == canp) {
    LPC_SC->PCONP |= (1UL << 14);
  }
#endif

  canp->can->MOD = CANMOD_RM;           /* Reset mode. */

#if !LPC17xx_CAN_USE_FILTER
  LPC_CANAF->AFMR = AFMR_ACC_BP;        /* Bypass can filter. */
#endif

  /* Entering initialization mode. */
  canp->state = CAN_STARTING;

  canp->can->BTR = canp->config->btr;   /* BTR initialization.*/
  canp->can->CMR = CANCMR_RRB;

  /* Interrupt sources initialization.*/
  canp->can->IER = CANIER_TIE3 | CANIER_TIE2 | CANIER_BEIE |
                   CANIER_EPIE | CANIER_DOIE | CANIER_EIE  |
                   CANIER_TIE1 | CANIER_RIE;

#if CAN_USE_SLEEP_MODE
  canp->can->IER |= CANIER_WUIE;
  nvicEnableVector(CANActivity_IRQn,
                           CORTEX_PRIORITY_MASK(LPC17xx_CAN_IRQ_PRIORITY));
#endif /* CAN_USE_SLEEP_MODE */

  canp->can->MOD = canp->config->mod;       /* Operating mode. */

  nvicEnableVector(CAN_IRQn,
                         CORTEX_PRIORITY_MASK(LPC17xx_CAN_IRQ_PRIORITY));
}

void can_lld_stop(CANDriver *canp) {

  /* If in ready state then disables the CAN peripheral.*/
  if (canp->state == CAN_READY) {

    canp->can->MOD = CANMOD_RM;                 /* Reset mode. */
    canp->can->IER = 0;
#if (LPC17xx_CAN_USE_CAN1 && LPC17xx_CAN_USE_CAN2) == 0
    nvicDisableVector(CAN_IRQn);                /* Interrupt disabled only if one CAN is in use. */
#endif

#if LPC17xx_CAN_USE_CAN1
    if (&CAND1 == canp) {
      LPC_SC->PCONP &= ~(1UL << 13);
    }
#endif
#if LPC17xx_CAN_USE_CAN2
    if (&CAND2 == canp) {
      LPC_SC->PCONP &= ~(1UL << 14);
    }
#endif

#if CAN_USE_SLEEP_MODE
    nvicDisableVector(CANActivity_IRQn);
#endif /* CAN_USE_SLEEP_MODE */
  }
}

bool_t can_lld_is_tx_empty(CANDriver *canp, canmbx_t mailbox) {

  switch (mailbox) {
  case CAN_ANY_MAILBOX:
    return ((canp->can->SR & (CANSR_TBS1 | CANSR_TBS2 | CANSR_TBS3)) != 0);
  case 1:
    return (canp->can->SR & CANSR_TBS1) != 0;
  case 2:
    return (canp->can->SR & CANSR_TBS2) != 0;
  case 3:
    return (canp->can->SR & CANSR_TBS3) != 0;
  default:
    return FALSE;
  }
}

void can_lld_transmit(CANDriver *canp,
                      canmbx_t mailbox,
                      const CANTxFrame *ctfp) {
  volatile uint32_t * tfi;
  uint32_t tbs_n;
  uint32_t sr;

  tbs_n = mailbox;

  if (mailbox == CAN_ANY_MAILBOX) {
    sr = canp->can->SR;
    if (sr & CANSR_TBS1) {
      tbs_n = 1;
    }
    else if (sr & CANSR_TBS2) {
      tbs_n = 2;
    }
    else if (sr & CANSR_TBS3) {
      tbs_n = 3;
    }
    else {
      return;
    }
  }

  /* Pointer to a free transmission mailbox.*/
  switch (tbs_n) {
  case 1:
    tfi = &canp->can->TFI1;
    break;
  case 2:
    tfi = &canp->can->TFI2;
    break;
  case 3:
    tfi = &canp->can->TFI3;
    break;
  default:
    return;
  }

  /* Preparing the message.*/
  * tfi = ((uint32_t)ctfp->IDE << 31) | ((uint32_t)ctfp->RTR << 30) |
      (((uint32_t)ctfp->DLC) << 16);    /* CAN Transmit Frame Information Register. */
  if (ctfp->IDE)
    *(tfi + 1) = ctfp->EID;             /* CAN Transmit Identifier register 29-bit. */
  else
    *(tfi + 1) = ctfp->SID;             /* CAN Transmit Identifier register 11-bit. */

  *(tfi + 2) = ctfp->data32[0];         /* CAN Transmit Data Register A. */
  *(tfi + 3) = ctfp->data32[1];         /* CAN Transmit Data Register B. */

#if LPC17xx_CAN_USE_LOCAL_SELF_TEST
  canp->can->CMR = (1UL << (4 + tbs_n)) | CANCMR_SRR;
#else
  canp->can->CMR = (1UL << (4 + tbs_n)) | CANCMR_TR;
#endif
}

bool_t can_lld_is_rx_nonempty(CANDriver *canp, canmbx_t mailbox) {

  switch (mailbox) {
  case CAN_ANY_MAILBOX:
  case 1:
    return ((canp->can->GSR & CANGSR_RBS) != 0);
  default:
    return FALSE;
  }
}

void can_lld_receive(CANDriver *canp,
                     canmbx_t mailbox,
                     CANRxFrame *crfp) {
  uint32_t rfs, rid;

  switch (mailbox) {
  case CAN_ANY_MAILBOX:
  case 1:
    /* Fetches the message.*/
    rfs = canp->can->RFS;
    rid = canp->can->RID;
    crfp->data32[0] = canp->can->RDA;
    crfp->data32[1] = canp->can->RDB;

    /* Releases the mailbox.*/
    canp->can->CMR = CANCMR_RRB;

    /* Re-enables the interrupt in order to generate
       events again. */
    canp->can->IER |= CANIER_RIE;
    break;
  default:
    /* Should not happen, do nothing.*/
    return;
  }

  /* Decodes the various fields in the RX frame.*/
  crfp->RTR = (rfs & CANRFS_RTR) >> 30;
  crfp->IDE = (rfs & CANRFS_FF) >> 31;
  if (crfp->IDE) {
    crfp->EID = rid;
  }
  else {
    crfp->SID = rid;
  }
  crfp->DLC = (rfs & CANRFS_DLC) >> 16;
  crfp->IDF = (uint16_t)(rfs & CANRFS_ID);
}

void can_lld_sleep(CANDriver *canp) {

  canp->can->MOD |= CANMOD_SM;
}

void can_lld_wakeup(CANDriver *canp) {

  uint32_t reg_val;

#if LPC17xx_CAN_USE_CAN1
  if (&CAND1 == canp) {
    reg_val = (1UL << 1);
  }
#endif
#if LPC17xx_CAN_USE_CAN2
  if (&CAND2 == canp) {
    reg_val = (1UL << 2);
  }
#endif

  LPC_SC->CANSLEEPCLR = reg_val;
  canp->can->MOD &= ~CANMOD_SM;
  LPC_SC->CANWAKEFLAGS = reg_val;
}
